autocomplete dropdown horizontal scroll fix

--- a/web/src/pages/UserManagement/AddUser/CreateUser.scss
+++ b/web/src/pages/UserManagement/AddUser/CreateUser.scss
@@ -8,6 +8,7 @@
     height: auto !important;
     padding-top: 0;
     padding-bottom: 0;
+    overflow-x: hidden;
     [class^="makeStyles-bold"] {
       background: #fee285;
     }
